# uploads

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
.sqlx/: query-59abe8884d1f5d8624f561302f49e9cf72fb806ca348051a41ac03b94ebb3323.json  query-5b03b859cd8c732e47cc3cf0b42d6d91cf5e6ecb84f993fab857a00aa4febe33.json  query-8f4ee43ccdc6d91ff568cbf414c0d8db8aff1a4390567fc75dd296702290fa07.json  query-fad9c200a0f054f0c7de8e09e645205ab028472e8bcbe9ad96d72499e393af5b.json
arm64-cross/: Dockerfile
assets/: manifest.json  style.css
deb/: Dockerfile  build-deb-arm64.sh  build.sh  changelog  conffiles  control  copyright  env  postinst  uploads.7  uploads.service
migrations/: 001_init.sql
src/: config.rs  db.rs  file.rs  index.rs  main.rs  server.rs
templates/: index.html
